2024-01-31  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (fetch_dataset): change root URL
        from "https://www.bis.org/statistics/" to
        "https://data.bis.org/bulkdownload/" to accommodate
        bulk downloads of datasets -- the BIS has announced
        to no longer provide the datasets at
        https://www.bis.org/statistics/full_data_sets.htm
        from January 2024

2023-09-11  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.2-2

        * R/functions.R (fetch_dataset,process_dataset): add
        'zoo' support for dataset central-bank policy rates
        "full_cbpol_d_csv_row.zip"

2022-11-15  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.2-1

2022-10-10  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (fetch_dataset): the function
        gains several arguments, such as 'header' and
        'sep', which define the default settings for
        'read.table'. Further arguments can, as before, be
        passed via "...".

        The default setting for argument 'quote' now is
        "\"", which fixes the parsing of datasets such as
        'full_spp_csv.zip' that use double-quoted elements;
        thanks to Matthias Meiksner for reporting the
        issue on GitHub

2022-10-06  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.2-0

2022-06-20  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (fetch_dataset,process_dataset):
        add 'zoo' support for dataset "full_xru_csv.zip";
        'fetch_dataset' gains an argument 'frequency'

2022-06-19  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (process_dataset): use
        'read.table(fill = TRUE, ...)' for reading datasets
        (fetch_dataset, process_dataset): add 'zoo'
        support for dataset "full_xru_d_csv_row.zip"

2022-03-07  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.1-1
