@@ -1,5 +1,7 @@
 2024-01-31  Enrico Schumann  <es@enricoschumann.net>
 
+        * Scripts/tests.R: add test script
+
         * R/functions.R (fetch_dataset): change root URL
         from "https://www.bis.org/statistics/" to
         "https://data.bis.org/bulkdownload/" to accommodate
